--- a/styles/style.qss
+++ b/styles/style.qss
@@ -77,6 +77,7 @@ QPushButton#tabBtn {
     padding: 8px 16px;
     border-radius: 8px;
     font-weight: 600;
+    font-size: 12px;
     color: #374151;
 }
 
@@ -138,7 +139,8 @@ QPushButton#openAllCamerasButton:pressed {
 QPushButton {
     border-radius: 8px;
     padding: 6px 14px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 500;
     min-height: 28px;
     border: 1px solid #D1D5DB;
     background: #FFFFFF;
@@ -279,10 +281,8 @@ QLabel {
     color: #374151;
 }
 
-QLabel[variant="title"] {
+QLabel[variant="big"] {
     font-size: 18px;
-    font-weight: 700;
-    color: #111827;
 }
 
 QLabel[variant="error"] {
@@ -317,4 +317,79 @@ QGroupBox::title {
     top: 8px;
     background: #FFFFFF;
 
+}
+
+
+
+
+
+
+/* ===== Base ComboBox ===== */
+QComboBox {
+    background: #FFFFFF;
+    border: 1px solid #D1D5DB;
+    border-radius: 8px;
+    padding: 6px 36px 6px 10px;   /* справа место под стрелку */
+    min-height: 28px;
+    color: #111827;
+    font-size: 22px
+}
+
+/* Hover */
+QComboBox:hover {
+    border: 1px solid #9CA3AF;
+}
+
+/* Focus */
+QComboBox:focus {
+    border: 1px solid #2563EB;
+}
+
+/* Disabled */
+QComboBox:disabled {
+    background: #F9FAFB;
+    color: #9CA3AF;
+    border: 1px solid #E5E7EB;
+}
+
+/* ===== Arrow button area ===== */
+QComboBox::drop-down {
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 28px;
+    border: none;
+}
+
+/* Стрелка (можно заменить на svg через image:) */
+QComboBox::down-arrow {
+    width: 10px;
+    height: 10px;
+}
+
+/* ===== Popup list ===== */
+QComboBox QAbstractItemView {
+    background: #FFFFFF;
+    border: 1px solid #D1D5DB;
+    border-radius: 8px;
+    padding: 4px;
+    selection-background-color: #2563EB;
+    selection-color: #FFFFFF;
+    outline: none;
+}
+
+/* Элементы списка */
+QComboBox QAbstractItemView::item {
+    padding: 6px 8px;
+    border-radius: 6px;
+}
+
+/* Hover item */
+QComboBox QAbstractItemView::item:hover {
+    background: #F3F4F6;
+}
+
+/* Selected item */
+QComboBox QAbstractItemView::item:selected {
+    background: #2563EB;
+    color: #FFFFFF;
 }
